--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
+            android:name="com.stroke.HomeActivity"
+            android:exported="false" />
+        <activity
             android:name=".feature.onboarding.ui.OnboardingActivity"
             android:exported="false" />
         <activity
